--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
+		<h3>Open Javascript Console to see more</h3>
 		<div id="data">
 		</div>
 
